WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79265
Web Inspector: [Regression] xhr tests are crashing after
r108506
.
https://bugs.webkit.org/show_bug.cgi?id=79265
Summary
Web Inspector: [Regression] xhr tests are crashing after r108506.
Vsevolod Vlasov
Reported
2012-02-22 12:11:50 PST
xhr tests are crashing after
r108506
. http/tests/inspector/console-xhr-logging-async.html = CRASH http/tests/inspector/network/network-disable-cache-xhrs.html = CRASH Skipped in: <
http://trac.webkit.org/changeset/108525
>
Attachments
Patch
(3.97 KB, patch)
2012-02-22 12:15 PST
,
Vsevolod Vlasov
pfeldman
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-02-22 12:15:28 PST
Created
attachment 128261
[details]
Patch
WebKit Review Bot
Comment 2
2012-02-23 04:14:55 PST
Comment on
attachment 128261
[details]
Patch Rejecting
attachment 128261
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: patching file Source/WebCore/inspector/InspectorResourceAgent.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/chromium/test_expectations.txt Hunk #1 FAILED at 4227. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/chromium/test_expectations.txt.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Pavel Feld..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/11603215
Vsevolod Vlasov
Comment 3
2012-02-24 01:30:50 PST
Committed
r108749
: <
http://trac.webkit.org/changeset/108749
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug