Web Inspector: [Regression] xhr tests are crashing after r108506. https://bugs.webkit.org/show_bug.cgi?id=79265

Reviewed by Pavel Feldman.

Source/WebCore:

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::setInitialScriptContent):
(WebCore::InspectorResourceAgent::setInitialXHRContent):

LayoutTests:

* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/96525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108749 268f45cc-cd09-0410-ab3c-d52691b4dbfc